...
  onDone = (item: DailyItem) => this.props.toggleItem(item.id, "isDone");

  onDayChange = (day: Day) => this.props.selectDay(day.key);

  render() {
    return (
      <View testID="MainPage" style={styles.container}>
        <DaySlider
          days={this.props.days} onDayChange={this.onDayChange}
          onMoveWeekLeft={this.props.moveWeekBackward}
          onMoveWeekRight={this.props.moveWeekForward}
          title={`${this.props.weekDate} - Week ${this.props.weekNumber}`}
        />
...
          )}
          data={this.props.tasks}
          ListEmptyComponent={() => <Text style={styles.emptyPageText}>Click 'Add' to add tasks to this day</Text>}
          ItemSeparatorComponent={() => <View style={styles.separator}/>}
        />
        <View style={styles.onPress}>
          <Button testID="AddTask" onPress={this.createNewItem} title="Add"/>
        </View>
      </View>
    );
  }
}

...
