export const testIds = {
  textInput: "CreateTask.TextInput"
};
